chore: config, app, docker, cassandra y dependencias
- .env.example, config.py, requirements.txt
- app_visualizacion.py, app_visualizacion_kdd_panel.py
- cassandra/conf: cassandra-env, jvm-server
- docker: docker-compose-kafka, instalar_docker_kafka
- orquestacion, persistencia_hive, procesamiento_grafos
- data/gps_logs/ejemplo_gps.json
- README, AGENTS.md, .gitignore

Made-with: Cursor